# YOLOv8_RK3588_object_pose

./: CMakeLists.txt  README.md
include/: postprocess.h
python_script/: jpg2png.py
src/: main.cc  postprocess.cc  yolov8-pose.cc
utils/: image_drawing.h  image_utils.c
